syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

service Greeter {
  rpc CreateEvent (HelloRequest) returns (HelloReply);
  rpc SayGoodBye (GoodByeRequest) returns (GoodByeReply);
  rpc GetGreeter (GetGreeterRequest) returns (HelloReply);
  rpc UpdateGreeter (UpdateGreeterRequest) returns (HelloReply);
  rpc DeleteGreeter (GetGreeterRequest) returns (GoodByeReply);
  rpc GetManyGreeters (GetManyGreetersRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
  string city = 3;
}
message UpdateGreeterRequest {
  string name = 1;
  int32 age = 2;
  string city = 3;
  int32 id = 4;
}

message HelloReply {
  string message = 1;
  string name = 2;
  int32 age = 3;
  string city = 4;
}

message GoodByeRequest {
  string name = 1;
}

message GoodByeReply {
  string message = 1;
}

message GetGreeterRequest {
  int32 id = 1;
}

message GetGreeterReply {
  string message = 1;
}

message GetManyGreetersRequest {
  int32 count = 1; // Number of Greeters to retrieve
}
